--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         alert("Choose something first 👀");
         return;
       }
-      window.location.href = "PASTE_YOUR_GOOGLE_FORM_LINK_HERE";
+      window.location.href = "https://forms.gle/hWp3oYFZo316yiU59";
     }
   </script>
 </body>
