--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
         alert("Choose something first 👀");
         return;
       }
-      window.location.href = "https://forms.gle/hWp3oYFZo316yiU59";
-    }
+      window.open("https://forms.gle/hWp3oYFZo316yiU59","_blank"
+    );
+   }
   </script>
 </body>
 </html>
